tools/hermes/tests/fixtures/diagnostic_mapping/expected.stderr
  × Tactic `decide` proved that the proposition
  │   1 = 2
  │ is false
    ╭─[[PROJECT_ROOT]/src/lib.rs:9:28]
  8 │ /// proof context:
  9 │ ///   have h : 1 = 2 := by decide
    ·                            ───┬──
    ·                               ╰── here
 10 │ /// ```
    ╰────

  × Unknown identifier `invalid_tactic_xyz`
    ╭─[[PROJECT_ROOT]/src/lib.rs:20:6]
 19 │ /// proof context:
 20 │ ///  invalid_tactic_xyz
    ·      ─────────┬────────
    ·               ╰── here
 21 │ /// ```
    ╰────

  × Unknown identifier `exact`
    ╭─[[PROJECT_ROOT]/src/lib.rs:30:7]
 29 │ /// proof context:
 30 │ ///   exact h_bad
    ·       ──┬──
    ·         ╰── here
 31 │ /// ```
    ╰────

  × The 'sorry' tactic is forbidden; use --allow-sorry to allow it.
    ╭─[[PROJECT_ROOT]/src/lib.rs:41:7]
 40 │ /// proof context:
 41 │ ///   sorry
    ·       ──┬──
    ·         ╰── here
 42 │ /// ```
    ╰────

Error: Lean verification failed
